# CV_Libraries_Installation_Ubuntu_20_04_PY38

./: Install_CV_required_libraries_PY38_Ubuntu2004.sh  README.md  build_caffe.sh  cv_requirements_py38.in  cv_requirements_ubuntu_20_04_py38.txt  vision_tasks.sh
installation_py38/: build_opencv-4_3_0.sh  prerequisite_system_packages.sh
installation_py38/DeepLab_V1/: ProgressBar.py
installation_py38/DeepLab_V1/DeepLab-LargeFOV/: deploy21.prototxt
installation_py38/DeepLab_V1/code/: CMakeLists.txt  Makefile  Makefile.config.example  a.out  install_caffe.sh  test_opencv.cpp
installation_py38/DeepLab_V1/code/densecrf/: prog_refine_pascal  prog_refine_pascal_v4  prog_test_densecrf
installation_py38/DeepLab_V1/code/include/caffe/: common.cuh  data_layers.hpp
installation_py38/DeepLab_V1/code/include/caffe/proto/: caffe.pb.h  caffe_pretty_print.pb.h
installation_py38/DeepLab_V1/code/python/: classify.py  detect.py  draw_net.py  requirements.txt
installation_py38/DeepLab_V1/code/python/caffe/: _caffe.cpp  _caffe.hpp  pycaffe.py
installation_py38/DeepLab_V1/code/python/caffe/proto/: caffe_pb2.py  caffe_pretty_print_pb2.py
installation_py38/DeepLab_V1/code/src/caffe/layers/: memory_data_layer.cpp  window_data_layer.cpp
installation_py38/DeepLab_V1/code/src/caffe/test/: cmake_test_defines.hpp.gen.cmake
installation_py38/DeepLab_V1/code/src/caffe/util/: io.cpp
installation_py38/YPRConversion/: CMakeLists.txt
installation_py38/YPRConversion/src/: QuaternionYPR.cpp  QuaternionYPR.hpp  get_YPR.cpp  get_YPR.hpp
installation_py38/pyboostcvconverter/: utils.py
(+2 files in other folders)
